Try storing junit records

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,3 +48,13 @@ jobs:
       - run:
           name: Publish Snapshot
           command: scripts/circle-ci-publish-snapshot.sh
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/junit/
+            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/junit
+      - store_artifacts:
+          path: ~/junit
