added jitpack build gradle

--- a/litho-espresso/build.gradle
+++ b/litho-espresso/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     androidTestAnnotationProcessor project(':litho-processor')
 }
 
-apply from: rootProject.file('gradle/release.gradle')
+apply from: rootProject.file('gradle/jitpack.gradle')
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
