--- a/litho-annotations/build.gradle
+++ b/litho-annotations/build.gradle
@@ -25,4 +25,4 @@ dependencies {
     compileOnly deps.supportAnnotations
 }
 
-apply from: rootProject.file('gradle/release.gradle')
+apply from: rootProject.file('gradle/jitpack.gradle')
