--- a/litho-core/build.gradle
+++ b/litho-core/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     }
 }
 
-apply from: rootProject.file('gradle/release.gradle')
+apply from: rootProject.file('gradle/jitpack.gradle')
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
