--- a/litho-sections-processor/build.gradle
+++ b/litho-sections-processor/build.gradle
@@ -31,4 +31,4 @@ dependencies {
     implementation deps.javapoet
 }
 
-apply from: rootProject.file('gradle/release.gradle')
+apply from: rootProject.file('gradle/jitpack.gradle')
