--- a/litho-testing/build.gradle
+++ b/litho-testing/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     compileOnly deps.supportAnnotations
 }
 
-apply from: rootProject.file('gradle/release.gradle')
+apply from: rootProject.file('gradle/jitpack.gradle')
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
