--- a/litho-widget/build.gradle
+++ b/litho-widget/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 
 }
 
-apply from: rootProject.file('gradle/release.gradle')
+apply from: rootProject.file('gradle/jitpack.gradle')
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
