--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ subprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://jitpack.io'}
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     }
     afterEvaluate {
@@ -62,7 +63,7 @@ ext.deps = [
         archLifecycle      : 'android.arch.lifecycle:extensions:1.1.1',
         // First-party
         fresco             : 'com.facebook.fresco:fresco:1.10.0',
-        soloader           : 'com.facebook.soloader:soloader:0.5.1',
+        soloader           : 'com.abhilashmishra:soloader:0.5.3',
         textlayoutbuilder  : 'com.facebook.fbui.textlayoutbuilder:textlayoutbuilder:1.4.0',
         screenshot         : 'com.facebook.testing.screenshot:core:0.5.0',
         flipper            : 'com.facebook.flipper:flipper:0.11.0',
